chore: update requirements

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,15 +1,18 @@
 pre-commit
 aioredis
-argon2
+argon2-cffi
 fastapi
 numpy
 Pillow
 pydantic
 python-dotenv
-python_bcrypt
+bcrypt
+python-jose
 rich
 slowapi
 snowflake_id
-tortoise
+tortoise-orm
+"tortoise-orm[asyncpg]"
 uvicorn
 async-cache
+aio-pika
