fix: syntax error with tortoise orm asyncpg + add aiosmtplib

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -12,8 +12,9 @@ rich
 slowapi
 snowflake_id
 tortoise-orm
-"tortoise-orm[asyncpg]"
+tortoise-orm[asyncpg]
 uvicorn
 async-cache
 aio-pika
 python-multipart
+aiosmtplib
