--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,14 @@ repos:
     hooks:
       - id: black
         args: [--safe]
+
   - repo: https://github.com/pycqa/flake8
     rev: 6.0.0
     hooks:
       - id: flake8
+
+  - repo: https://github.com/sourcery-ai/sourcery
+    rev: v1.3.0
+    hooks:
+      - id: sourcery
+        args: [--diff=git diff HEAD, --no-summary]
